--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/main.css" />
+        <link rel="stylesheet" href="css/login.css" />
+        <link rel="stylesheet" href="css/teacher.css" />
 
         <script src="https://unpkg.com/vue@3"></script>
         <script src="https://unpkg.com/vue-router@4"></script>
@@ -20,22 +22,22 @@
             import App from "./js/App.js";
             import Home from "./js/Home.js";
             import AdminPage from "./js/AdminPage.js";
-            import EditUser from "./js/EditUser.js";
             import HeadOfHumanResources from "./js/HeadOfHumanResources.js";
             import Teacher from "./js/Teacher.js";
             import Inspector from "./js/Inspector.js";
             import HeadOfCathedra from "./js/HeadOfCathedra.js";
+            import DataReports from "./js/DataReports.js";
 
 
 
             const routes = [
               { path: '/', component: Home },
               { path: '/admin', component: AdminPage },
-              { path: '/admin/edit-user/:id', component: EditUser, props: true },
               { path: '/head-of-human-resources', component: HeadOfHumanResources},
               { path: '/teacher', component: Teacher},
               { path: '/inspector', component: Inspector},
               { path: '/head-of-cathedra', component: HeadOfCathedra},
+              { path: '/data-reports', component: DataReports},
             ]
 
             const router = VueRouter.createRouter({
