--- a/static/index.html
+++ b/static/index.html
@@ -4,8 +4,9 @@
         <link rel="stylesheet" href="css/main.css" />
         <link rel="stylesheet" href="css/login.css" />
         <link rel="stylesheet" href="css/teacher.css" />
+        <link rel="stylesheet" href="css/data-reports.css" />
 
-        <link rel="stylesheet" href="https://unpkg.com/primevue/resources/themes/lara-light-green/theme.css" />
+        <link rel="stylesheet" href="https://unpkg.com/primevue/resources/themes/aura-light-noir/theme.css" />
         <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/primeflex.css">
         <link href="https://unpkg.com/primevue/resources/primevue.min.css" rel="stylesheet">
         <link href="https://unpkg.com/primeicons/primeicons.css" rel="stylesheet">
